--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -4,15 +4,21 @@
 
 <head>
   {{>head}}
-  <script src="/js/app.js"></script>
 </head>
 
 <body>
   <div class="main">
     {{>header}}
     <p>Use this site to get your weather</p>
+    <form>
+      <input placeholder="Location">
+      <button>Search</button>
+    </form>
+    <p id="message-1"></p>
+    <p id="message-2"></p>
   </div>
   {{>footer}}
+  <script src="/js/app.js"></script>
 </body>
 
 </html>
