--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -9,6 +9,7 @@
 <body>
   {{>header}}
   <div class="main">
+    <p>This site was created by Sam Edwards. It uses data from MapBox and WeatherStack</p>
     <img class="portrait" src="/images/me.jpeg" />
   </div>
   {{>footer}}
